# python-project-83

./: .env  .gitignore  Makefile  README.md  README_ru.md  app.py  database.sql  pyproject.toml
.github/workflows/: linter-tests.yml
page_analyzer/: __init__.py  app.py  const.py  constants.py  database.py  db.py  handler.py  handlers.py  valid.py  validate.py  validator.py
page_analyzer/static/css/: styles.css
page_analyzer/static/js/: yeti.js
page_analyzer/templates/: 404.html  all_urls.html  boiler.html  error.html  index.html  layout.html  show.html  url.html  urls.html
